# banana

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  README.md  dev_requirements.txt  doc_requirements.txt  index.html  pyproject.toml  setup.py  test_requirements.txt
.github/workflows/: pub_docs.yml  pypi.yml  unittests.yml
develop/: .buildinfo  index.html  objects.inv  orm.html  search.html  searchindex.js
develop/_sources/modules/banana/: banana.benchmark.external.rst.txt  banana.benchmark.rst.txt  banana.data.rst.txt  banana.navigator.rst.txt  banana.rst.txt
develop/development/: code_todos.html
develop/modules/banana/: banana.benchmark.external.html  banana.benchmark.html  banana.data.html  banana.html  banana.navigator.html
docs/: .gitignore  Makefile
docs/_assets/: logo.xcf
docs/notes/: dev.md  todo.md
docs/source/: conf.py  db-suite.rst  db.rst  index.rst  orm.rst  post-process.rst  setup.rst  tools.rst
docs/source/benchmarks/: db.rst  navigator.rst  overview.rst  running.rst
docs/source/shared/: abbreviations.rst
docs/source/tools/: genpdf.rst  overview.rst  toy.rst
src/banana/: __init__.py  cfg.py  mode_selector.py  toy.py  utils.py
src/banana/benchmark/: apfel.py  db_interface.py  regression.py  runner.py
src/banana/data/: __init__.py  basis_rotation.py  card_generator.py  db.py  dfdict.py  generate_pdf.py  sql.py  templatePDF.info  theories.py  theory_template.yaml
src/banana/data/generate_pdf/: __init__.py
src/banana/data/generate_pdf2/: __init__.py  export.py  filter.py  load.py  templatePDF.info
src/banana/data/genpdf/: Toy.info  __init__.py  cli.py  export.py  filter.py  load.py  project.py
src/banana/navigator/: __init__.py  dfdict.py  navigator.py  table_manager.py  utils.py
src/banana/toolbox/: worker.py
src/banana/tools/: toy.py
src/banana/tools/genpdf/: __init__.py  cli.py  export.py  flavors.py  load.py
stable/: genindex.html  index.html
stable/_sources/: index.rst.txt
stable/_sources/development/: code_todos.rst.txt
stable/_sources/modules/banana/: banana.benchmark.rst.txt  banana.data.rst.txt  banana.rst.txt
stable/modules/banana/: banana.html
tests/: conftest.py  test.py  test_cfg.py  test_data.py  test_data_dfdict.py  test_data_generate_pdf-old.py  test_data_generate_pdf.py  test_data_generate_pdf_CLI.py  test_data_generate_pdf_export.py  test_data_generate_pdf_filter.py  test_data_generate_pdf_load.py  test_data_genpdf_CLI.py  test_data_genpdf_cli.py  test_data_genpdf_export.py  test_data_genpdf_filter.py  test_data_genpdf_flavors.py  test_data_genpdf_init.py  test_data_genpdf_load.py  test_data_genpdf_project.py  test_data_theories.py  test_nav.py  test_nav_dfdict.py  test_nav_navigator.py  test_nav_table_manager.py  test_nav_utils.py  test_toy.py  test_utils.py  test_version.py  utils.py
tests/data/: test_dfdict.py  test_theories.py
tests/navigator/: conftest.py  test_init.py  test_nav_utils.py  test_navigator.py  test_table_manager.py
tests/tools/: test_genpdf_cli.py  test_genpdf_export.py  test_genpdf_flavors.py  test_genpdf_init.py  test_genpdf_load.py  test_toy.py
