[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "banana-hep"
version = "0.0.0"
description = "Benchmark QCD physics"
authors = ["Andrea Barontini", "Alessandro Candido", "Felix Hekhorn", "Giacomo Magni"]
repository = "https://github.com/N3PDF/banana"
classifiers = [
"Programming Language :: Python",
"Programming Language :: Python :: 3",
"Topic :: Scientific/Engineering",
"Topic :: Scientific/Engineering :: Physics"
]
include = [ "src/banana/data/genpdf/*.info",  "src/banana/data/theory_template.yaml" ]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.30.1"
SQLAlchemy = "^1.4.29"
numpy = "^1.22.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
rich = "^10.16.1"
PyYAML = "^6.0"
click = "^8.0.3"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
genpdf = "banana.data.genpdf.cli:cli"

[tool.pytest.ini_options]
addopts = '--cov=banana --cov-report=html --cov-report=xml --strict-markers'
