[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "banana-hep"
version = "0.0.0"
description = "Benchmark QCD physics"
readme = "README.md"
authors = [
  "Andrea Barontini <andrea.barontini@mi.infn.it>",
  "Alessandro Candido <alessandro.candido@mi.infn.it>",
  "Felix Hekhorn <felix.hekhorn@mi.infn.it>",
  "Giacomo Magni <gmagni@nikhef.nl>",
]
repository = "https://github.com/N3PDF/banana"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
include = [
  "src/banana/data/theory_template.yaml",
  "src/banana/tools/genpdf/*.info",
]
packages = [{ include = "banana", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8.0,<3.11"
ipython = "^8.1.0"
SQLAlchemy = "^1.4.29"
numpy = "^1.21.0"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
rich = "^10.16.1"
PyYAML = "^6.0"
click = "^8.0.3"
pendulum = "^2.1.2"
eko = "^0.8.2"
# docs dependencies (for readthedocs)
Sphinx = { version = "^4.3.2", optional = true }
sphinx-rtd-theme = { version = "^1.0.0", optional = true }
sphinxcontrib-bibtex = { version = "^2.4.1", optional = true }
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
black = "^21.12b0"
isort = "^5.10.1"
pylint = "^2.12.2"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-env = "^0.6.2"
pre-commit = "^2.16.0"
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-bibtex = "^2.4.1"
pyfakefs = "^4.5.3"

[tool.poetry.extras]
pineappl = ["pineappl"]
docs = ["sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]

[tool.poetry.scripts]
genpdf = "banana.tools.genpdf.cli:cli"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
dirty = true

[tool.poetry-dynamic-versioning.substitution]
files = ["src/banana/__init__.py"]

[tool.poe.tasks]
coverage = "$BROWSER htmlcov/index.html"
test = "pytest tests"
test-cov = ["test", "coverage"]
lint = "pylint src/*/*.py -E"
lint-warnings = "pylint src/*/*.py --exit-zero"
black = "black ."
isort = "isort ."
format = ["black", "isort"]
docs = { "shell" = "cd docs; make html" }
docs-view = { "shell" = "cd docs; make view" }
docs-server = { "shell" = "cd docs; make server" }
docs-clean = { "shell" = "cd docs; make clean" }
docs-cleanall = { "shell" = "cd docs; make cleanall" }

[tool.pytest.ini_options]
addopts = [
  '--cov=banana',
  '--cov-report=html',
  '--cov-report=xml',
  '--strict-markers',
]
env = ["NUMBA_DISABLE_JIT=1"]
